--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,12 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=none
-spring.jpa.use_sql_comment=true
 spring.jpa.database=mysql
-spring.datasource.url=jdbc:mysql://localhost:3306/refrigerator
+spring.datasource.url=jdbc:mysql://49.50.161.94:3306/refrigerator
 spring.datasource.url.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.Driverspy
 spring.datasource.username=root
-spring.datasource.password=0506
-spring.jpa.hibernate.jdbc.time_zone= Asia/Seoul
+spring.datasource.password=Refri0506@!
 spring.jpa.properties.hibernate.default_batch_fetch_size=1000
 
 spring.batch.job.names= ${job.name:NONE}
-logging.level.org.springframework.batch= DEBUG
-
 spring.batch.job.enabled=false
+logging.level.org.springframework.batch= DEBUG
