--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -15,3 +15,5 @@ spring.batch.job.names= ${job.name:NONE}
 logging.level.org.springframework.batch= DEBUG
 
 spring.batch.job.enabled=false
+
+spring.main.allow-bean-definition-overriding=true
